[tool.poetry]
name = "pacdb"
version = "0.1.0"
description = "Pure-python module to parse and read pacman sync dbs."
authors = ["Jeremy Drake <github@jdrake.com>"]
repository = "https://github.com/jeremyd2019/pacdb"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
zstandard = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

